--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/*body {
+	background-image: url(../instructions/fontbody.jpg);
+	background-size: cover;
+}*/
 a {
 	text-decoration: none;
 	font-family: 'Maven Pro', sans-serif;
@@ -14,6 +18,7 @@ a:hover {
 	text-align: center;
 	font-family: 'Maven Pro', sans-serif;
 	padding-bottom: 100px;
+	opacity: 0.7;
 }
 h1 {
 	font-size: 3.5em;
@@ -31,7 +36,7 @@ nav {
 	text-align: center;
 	padding: 10px;
 	position: fixed;
-	z-index: 3;
+	z-index: 10;
 	top: 0; /*stay on top*/
 	height: auto; /* Full-height: remove this if you want "auto" height */
     width: 100%; /* Set the width of the sidebar */
@@ -41,6 +46,7 @@ nav a {
 	padding: 40px;
 	color: white;
 }
+
 .nosservices {
 	border: 1px solid black;
 	border-radius: 5px;
@@ -62,42 +68,38 @@ nav a {
 	position: fixed;
 	right: 20px;
 	bottom: 0;
-	z-index: 4
+	z-index: 15
 }
 .floatIcon a {
 	font-size: 1em;
 	width: 160px;
 }
 
-.maincontent {
-	width: 90%;
-}
+
 h2 {
 	text-align: left;
 }
 
 #slider {
     width: 100%;
-    height: 300px;
-    margin:20px;
+    height: 350px;
     overflow: hidden;
     position: relative;
     z-index: 1;
 }
 #slider ul {
 	position: absolute;
-	left: 0; 
 }
 #slider ul li {
     float: left;
     list-style: none;
 }
-#button {
+#hideAera {
 	/*background-image: url(../instructions/button4.jpg) ;
 	background-size: cover;*/
 	background-color: white;
 	width: 10%;
-	height: 300px;
+	height: 350px;
 	position: relative;
 	
  	/*border-top: 300px solid red;
@@ -107,6 +109,24 @@ h2 {
 	z-index: 2;
 	position: absolute;
 	opacity: 1;
+}
+#start {
+	border: transparent;
+	top: 15%;
+	left: 25%;
+	position:absolute;
+	padding: 10px;
+	color: grey;
+
+}
+#stop {
+	border: transparent;
+	top: 60%;
+	left: 25%;
+	position:absolute;
+	padding: 10px;
+	color: grey;
+
 }
 
 form {
