--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
-/*body {
-	background-image: url(../instructions/fontbody.jpg);
-	background-size: cover;
-}*/
+body {
+	box-sizing: border-box;
+}
 a {
 	text-decoration: none;
 	font-family: 'Maven Pro', sans-serif;
@@ -12,13 +11,14 @@ a:hover {
 	color: #064579;
 }
 .generalinfo {
-	background-image: url(../instructions/background6.jpg);
+	height: 700px;
+	background-image: url(../instructions/background10.jpg);
 	background-size: cover;
-	color: white;
+	background-color: #ffffff;
+	color: red;
 	text-align: center;
-	font-family: 'Maven Pro', sans-serif;
-	padding-bottom: 100px;
-	opacity: 0.7;
+	margin-bottom: 100px;
+	opacity: 0.9;
 }
 h1 {
 	font-size: 3.5em;
@@ -46,21 +46,34 @@ nav a {
 	padding: 40px;
 	color: white;
 }
+/*.maincontent {
+	background-color: white;
+	position: relative;
+	z-index: 2;
+}*/
 
-.nosservices {
-	border: 1px solid black;
-	border-radius: 5px;
+/*.nosservices {
 	padding: 10px;
 	margin-top: 20px;
 	text-align: center;
-}
+}*/
 .service {
-	border:1px solid black;
-	border-radius: 5px;
-	padding: 50px 200px;
-	margin: 50px 100px;
+	border:1px solid #aaaaaa;
+	border-radius: 50%;
+	width: 25%;
+	padding: 70px 30px;
+	margin: 25px;
 	display: inline-block;
+	font-family: 'Maven Pro', sans-serif;
+	text-align: center;
 }
+.service ul li{
+	text-align: left;
+}
+h3 {
+	font-size: 2em;
+}
+
 .floatIcon {
 	height: auto;
 	width: 120px;
@@ -78,14 +91,15 @@ nav a {
 
 h2 {
 	text-align: left;
+	color: #aaaaaa;
 }
 
 #slider {
-    width: 100%;
+    /*width: 100%;*/
     height: 350px;
     overflow: hidden;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 #slider ul {
 	position: absolute;
@@ -93,7 +107,10 @@ h2 {
 #slider ul li {
     float: left;
     list-style: none;
+    padding:0;
+    margin: 0;
 }
+
 #hideAera {
 	/*background-image: url(../instructions/button4.jpg) ;
 	background-size: cover;*/
@@ -101,12 +118,8 @@ h2 {
 	width: 10%;
 	height: 350px;
 	position: relative;
-	
- 	/*border-top: 300px solid red;
- 	border-left: 70px solid blue;
- 	border-right: 70px solid green;*/
-	left: 600px;
-	z-index: 2;
+	left: 650px;
+	z-index: 3;
 	position: absolute;
 	opacity: 1;
 }
@@ -116,7 +129,7 @@ h2 {
 	left: 25%;
 	position:absolute;
 	padding: 10px;
-	color: grey;
+	color: #aaaaaa;
 
 }
 #stop {
@@ -125,7 +138,7 @@ h2 {
 	left: 25%;
 	position:absolute;
 	padding: 10px;
-	color: grey;
+	color: #162f42;
 
 }
 
@@ -141,7 +154,7 @@ button {
 	padding: 10px 20px;
 	border-radius: 5px;
 	position: relative;
-	z-index: 2;
+	z-index: 4;
 	opacity: 0;
 }
 
