--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,12 @@ body {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	font-family: 'Maven Pro', sans-serif;
-
+	background-color: #F7F7F7;
 }
 a {
 	text-decoration: none;
 	font-size: 1.1em;
-	color: #FA4032;
+	color: red;
 }
 a:hover {
 	color: #333;
@@ -24,29 +24,29 @@ a:hover {
 	
 }
 #logo img {
-	background-color: #FA4032;
+	background-color: #ec462f;
 	padding: 10px 15px;
 	border-radius: 100%;
 }
 #logo>p {
-	color: #FA4032;
+	color: red;
 	margin: 0;
 }
 nav {
 	padding: 10px 2px;
 	position: fixed;
-	top: 5px;
+	top: 15px;
 	right: 20px;
 	height: auto;
     z-index: 50;
 
 }
 nav a {
-	background-color: #FA4032;
+	background-color: red;
 	color: white;
 	padding:5px;
 	margin:0 5px;
-	border:1px solid #FA4032;
+	border:1px solid red;
 	border-radius: 5px;
 }
 #fa-bars {
@@ -59,14 +59,12 @@ nav a {
 }
 
 .generalinfo {
-	clear: both;
-	background-image: url(../instructions/background10.jpg);
+	background-image: url(../instructions/background11.jpg);
 	width: 100%;
 	height: 800px;
 	text-align: center;
 	margin:0 auto;
 	position: fixed;
-	opacity: 0.9;
 	top: 0;
 }
 .generalinfo>p {
@@ -74,18 +72,23 @@ nav a {
 	margin: 0;
 }
 .maincontent {
-	margin-top: 30%;
-	background-color: white;
+	margin-top: 31%;
+	background-color: #F7F7F7;
 	position:relative;
 	z-index: 1;
 }
 h2 {
 	color: #aaaaaa;
 	margin-top: 30px;
+	margin-bottom: 10px;
 	padding: 10px;
-	border:1px solid #aaaaaa;
+	font-size: 2.2em;
+	/*border:1px solid #aaaaaa;
 	border-radius: 5px;
-	display: inline-block;
+	display: inline-block;*/
+}
+span {
+	color: red;
 }
 
 .floatIcon {
@@ -109,7 +112,7 @@ h2 {
     position: relative;
     z-index: 5;
     margin-bottom: 50px;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 #slider ul {
 	position: absolute;
@@ -122,10 +125,9 @@ h2 {
 }
 
 #hideAera {
-	background-color: white;
+	background-color: #F7F7F7;
 	width: 10%;
 	height: 350px;
-	position: relative;
 	left: 45%;
 	z-index: 6;
 	position: absolute;
@@ -137,8 +139,7 @@ h2 {
 	left: 25%;
 	position:absolute;
 	padding: 10px;
-	color: blue;
-
+	color: #4443C9;
 }
 #stop {
 	border: transparent;
@@ -147,7 +148,6 @@ h2 {
 	position:absolute;
 	padding: 10px;
 	color: yellow;
-
 }
 h3 {
 	font-size: 2em;
@@ -158,8 +158,7 @@ h3 {
 	justify-content: center;
 }
 .service {
-	margin: 50px 20px;
-	display: inline-block;
+	margin: 20px 20px 10px;
 	text-align: center;
 }
 .service img {
@@ -170,9 +169,8 @@ h3 {
 .service ul li {
 	text-align: left;
 }
-
 form {
-	margin-bottom: 230px;
+	margin-bottom: 50px;
 	display: block;
 }
 input {
@@ -185,15 +183,32 @@ input {
 	cursor: pointer;
 	padding: 5px;
 	margin-top: 28px;
-	margin-bottom: 20px;
 }
 #send {
 	background-color: #FA4032;
-	color: white
+	color: white;
 }
 #delete {
-	background-color: grey;
-
+	background-color: white;
+	color: red;
+}
+#contactform {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+form {
+	margin: 10px;
+}
+#googlemap {
+	margin: 10px;
+}
+#googlemap button{
+	margin-left: 5px;
+}
+#house {
+	height: 200px;
+	margin-bottom: 20px;
 }
 footer {
 	text-align: center;
@@ -210,15 +225,14 @@ h5 {
 
 
 
-/* -------------pour smartphone------------ */
+/* -------------pour phone et tablette------------ */
 @media screen and (max-width: 768px){
 
-	h1 {
-		font-size: 1.5em;
-	}
+	
 	h2 {
 		font-size: 1.5em;
 		text-align: center;
+		margin: 0 auto;
 	}
 	h3 {
 		font-size: 1.2em;
@@ -226,32 +240,17 @@ h5 {
 	a {
 		font-size: 1.2em;
 	}
-	#logo {
-		display: none;
-	}
 	nav {
 		display: none;
 		/*position: absolute;*/
 	}
-	.generalinfo {
-	background-image: url(../instructions/background10respon.jpg);
-	max-width: 100%;
-	height: auto;
-	position: absolute;
-
-	}
-	.generalinfo>p {
-		font-size: 1.5em;
-	}
-	.floatIcon{
-		display: none;
-	}
 	#fa-bars{
-		display: block;
-		position: absolute;
+		display: inline-block;
+		position: relative;
 		z-index: 100;
 		color:#FA4032;
-		float: left;
+		float: right;
+		vertical-align:top;
 	}
 	#dropMenu {
 		background-color: white;
@@ -261,8 +260,6 @@ h5 {
 		z-index: 50;
 		border: 1px solid #FA4032;
 		border-radius: 5%;
-		z-index: 40;
-
 	}
 	#dropMenu ul {
 		padding-left: 20px;
@@ -272,16 +269,38 @@ h5 {
 	#dropMenu ul li {
 		list-style: none;
 	}
-	.h1 {
-		clear: both;
+	.generalinfo {
+		background-image: url(../instructions/backgroundrespon.png);
+		background-size: cover;
+		width: 100%;
+		height: 170px;
+		position: absolute;
+	}
+	.floatIcon{
+		display: none;
+	}
+	.nosservices {
+		flex-direction: column;
 	}
 	.service {
-		width: 100%;
 		margin: 0 auto;
-		display: block;
+	}
+	textarea {
+		width: 100%;
 	}
 
-
+	#send, #delete {
+		margin-top: 10px;
+	}
+	#delete {
+		margin-bottom: 20px;
+	}
+	#contactform {
+		flex-direction: column;
+	}
+	#house{
+		display: none;
+	}
 }
 
 
