--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@ body {
 	font-family: 'Maven Pro', sans-serif;
 	background-color: #f7f7f7;
 	font-size: 15px;
-	margin: 0;
-	padding: 0;
 }
 a {
 	text-decoration: none;
@@ -15,6 +13,12 @@ a {
 }
 a:hover {
 	color: #333;
+}
+button{
+	font-size: 0.8em;
+	padding:5px auto;
+	background-color: white;
+	border-radius: 5px;
 }
 span {
 	color: #ff0505;
@@ -64,6 +68,10 @@ h3 span{
 	padding:0;
 	margin:0;
 }
+.fa-mobile-alt, .fa-envelope{
+	color: #58c5a8;
+	padding-right: 5px;
+}
 nav {
 	padding-left: 2px;
 	position: relative;
@@ -98,20 +106,27 @@ nav a {
 	position:relative;
 	z-index: 1;
 }
-.floatIcon {
+/*.floatIcon {
 	display: inline-block;
-	height: auto;
-	max-width: 120px;
 	text-align: center;
 	position: fixed;
-	right: 20px;
-	bottom: 0;
+	right: 5px;
+	bottom: 5px;
 	z-index: 15;
+	border:1px solid red;
+	background-color: red;
+	border-radius: 5px;
+	padding:5px;
+	opacity: 0.8;
 }
-.floatIcon a {
-	font-size: 1em;
-	width: 160px;
+.fa-comment-alt {
+	color: white;
 }
+.floatIcon p {
+	font-size: 0.8em;
+	color: white;
+	margin: 0;
+}*/
 .nosservices {
 	display: flex;
 	flex-direction: row;
@@ -130,7 +145,7 @@ nav a {
 	text-align: left;
 }
 #slider {
-	height: 300px;
+	height: 400px;
 	overflow: hidden;
 	position: relative;
 	z-index: 5;
@@ -149,7 +164,7 @@ nav a {
 #hideAera {
 	background-color: #F7F7F7;
 	width: 10%;
-	height: 350px;
+	height: 400px;
 	left: 45%;
 	z-index: 6;
 	position: absolute;
@@ -172,8 +187,14 @@ nav a {
 	color: yellow;
 }
 form {
-	margin-bottom: 50px;
 	display: block;
+	margin: 10px;
+}
+#contactform {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 input {
 	padding: 10px 20px 10px 5px;
@@ -181,26 +202,16 @@ input {
 	border-radius: 5px;
 	display: block;
 }
-#send, #delete {
+#send{
 	cursor: pointer;
 	padding: 5px;
 	margin-top: 28px;
-}
-#send {
 	background-color: #ff0505;
 	color: white;
 }
-#delete {
-	background-color: white;
-	color: #ff0505;
-}
-#contactform {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-}
-form {
-	margin: 10px;
+#formPart>p{
+	margin-left:10px;
+	color: red;
 }
 #googlemap {
 	margin: 10px;
@@ -211,10 +222,6 @@ form {
 h4 {
 	font-weight: bold;
 	margin: 0;
-}
-.fa-mobile-alt, .fa-envelope{
-	color: #58c5a8;
-	padding-right: 5px;
 }
 iframe {
 	margin-top:70px;
@@ -257,7 +264,6 @@ iframe {
 		margin-top: 0;
 		background-color: #58c5a8;
 	}
-
 	#menu{
 		background-color: white;
 		display: flex;
@@ -329,14 +335,14 @@ iframe {
 	.service {
 		margin: 20px auto;
 	}
+	#hideAera {
+		display: none;
+	}
 	textarea {
 		width: 100%;
 	}
-	#send, #delete {
+	#send {
 		margin-top: 10px;
-	}
-	#delete {
-		margin-bottom: 20px;
 	}
 	#contactform {
 		flex-direction: column;
