--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,15 @@ span {
 	color: #ff0505;
 	margin: 2px;
 }
+li {
+	margin: 2px 0;
+}
 h2 {
 	color: #505050;
-	margin: 0 auto 10px;
 	padding: 30px 0 10px 20px;
 	font-size: 2.2em;
+	text-align: center
+;
 }
 h2 span {
 	color: #ff0505;
@@ -35,16 +39,6 @@ h3 span {
 	display: flex;
 	justify-content: space-around;
 	text-align: center;
-}
-#generalinfo a, #googlemap a {
-	font-size: 0.8em;
-	color: black;
-	padding: 2px;
-	margin: 2px;
-	border: 1px solid #aaaaaa;
-	border-radius: 5px;
-	background-color: white;
-	box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 }
 #logo {
 	display: flex;
@@ -64,14 +58,34 @@ h3 span {
 	width: 50%;
 	height: 90%;
 }
-#generalinfo {
+.generalinfo {
 	margin-top: 40px;
 }
-#generalinfo li {
+.generalinfo li {
 	text-align: left;
 	list-style: none;
 	padding: 0;
-	margin: 0;
+}
+.mobile {
+	font-size: 0.8em;
+	color: black;
+	padding: 2px 5px;
+	margin: 2px;
+	border: 1px solid #aaaaaa;
+	border-radius: 5px;
+	box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+	background-color: white;
+}
+.mobile:hover {
+	background-color: #f5f5f5;
+	font-weight: bold;
+}
+.mail {
+	color: black;
+}
+.mail:hover{
+	color: red;
+
 }
 .fa-mobile-alt, .fa-envelope {
 	color: #58c5a8;
@@ -91,6 +105,12 @@ nav a {
 	border: 1px solid #ff0505;
 	border-radius: 4px;
 }
+#postshow-overlay {
+	position: absolute;
+	min-height: 700px;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.55);
+}
 #backgroundimg {
 	background-image: url(../instructions/background.jpg);
 	min-height: 700px;
@@ -99,19 +119,53 @@ nav a {
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.postshow-overlay {
+#addres {
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(36, 36, 36, 0.4);
-}
-h1 {
-	color: white;
-	font-size: 60px;
-	position: absolute;
+	top: 45%;
+	left: 20%;
+	right: 20%;
 	text-align: center;
-	left: 10%;
-	margin: 300px 100px 180px;
+}
+#addres h1, #addres h3{
+	font-family: 'Lato', sans-serif;
+	color: white;
+}
+#addres h1 {
+	font-size: 3.2em;
+}
+#addres h3 {
+	font-size: 2.5em;
+	padding: 0;
+}
+#mouse {
+	position: absolute;
+	left: calc(50% - 13px);
+	width: 26px;
+	height: 50px;
+	border-radius: 15px;
+	border: 2px solid #fff;
+	cursor: pointer;
+}
+#mouse span {
+	height: 10px;
+	width: 2px;
+	position: absolute;
+	left: 40%;
+	top:70%;
+	background: #fff;
+	-webkit-animation: scroll .5s infinite alternate;
+	animation: scroll .5s infinite alternate;
+}
+@keyframes scroll {
+	0% {
+		top: 50%;
+	}
+	50% {
+		top: 55%;
+	}
+	100% {
+		top: 60%;
+	}
 }
 .maincontent {
 	/*margin-top: 350px;*/
@@ -179,48 +233,59 @@ h1 {
 	padding: 10px;
 	color: yellow;
 }
-form {
-	display: block;
-	margin: 10px;
-}
+
 #contactform {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
-input {
-	padding: 10px 20px 10px 5px;
-	margin: 5px 5px;
-	border-radius: 5px;
+form {
 	display: block;
+	margin: 0;
+	border: solid 1px #E4E4E4;
+	padding: 25px;
+	background-color: white;
+	border-radius: 10px;
 }
+input, textarea{
+	padding: 10px 0 10px 5px;
+	margin: 5px 0 5px 5px;
+	display: block;
+	border: 1px solid #E4E4E4;
+	font-weight: 100;
+}
+/*textarea {
+	font-size: 100%;
+	line-height: 1.15;
+	padding: 10px 0 10px 5px;
+	margin: 5px 0;
+	font-weight: 100;
+	border: 1px solid #E4E4E4;
+}*/
 #send {
 	cursor: pointer;
-	padding: 5px;
+	padding: 10px 25px;
 	margin-top: 28px;
-	background-color: #ff0505;
+	background-color: #58c5a8;
 	color: white;
+	border-radius: 50px;
 }
 #formPart>p {
 	margin-left: 10px;
 	color: red;
 }
 #googlemap {
-	margin: 10px;
+	margin: 5px;
 }
-#googlemap button {
-	margin-left: 5px;
-}
-h4 {
-	font-weight: bold;
-	margin: 0;
+#googlemap span {
+	color: black;
+	font-weight: bolder;
 }
 iframe {
 	margin-top: 70px;
 	width: 450px;
 	height: 350px;
-	frameborder: 0;
 	border: 0;
 }
 #house {
@@ -268,25 +333,39 @@ iframe {
 		max-width: 50%;
 		height: 100%;
 	}
-	#generalinfo {
+	.generalinfo {
 		margin: 0 auto;
 	}
 	nav {
 		display: none;
 	}
+	#postshow-overlay {
+		min-height: 200px;
+	}
 	#backgroundimg {
 		min-height: 200px;
 	}
-	.postshow-overlay {
-		height: 200px;
-	}
-	h1 {
+	#addres {
+		top:22%;
 		color: white;
 		font-size: 2em;
-		position: absolute;
-		text-align: center;
-		left: 0;
-		margin: 50px 0;
+	}
+	#addres h1 {
+		font-size: 0.8em;
+	}
+	#addres h3 {
+		font-size: 0.6em;
+	}
+	#mouse {
+		left: calc(50% - 6px);
+		width: 13px;
+		height: 25px;
+		border: 1px solid #fff;
+	}
+	#mouse span {
+		height: 5px;
+		width: 1px;
+		left: 30%;
 	}
 	.maincontent {
 		margin-top: 10px;
@@ -308,8 +387,19 @@ iframe {
 	#hideAera {
 		display: none;
 	}
+	input, textarea{
+		padding: 10px 0 10px 2px;
+		margin: 5px 0 5px 2px;
+	}
 	textarea {
 		width: 100%;
+	}
+	input[type="file"] {
+		border: none;
+		display: block;
+		font-size: 90%;
+		margin: 5px 0;
+		overflow: hidden;
 	}
 	#send {
 		margin-top: 10px;
